apps/oxlint/src/snapshots/fixtures__nested_config_--experimental-nested-config -A no-console --config oxlint-no-console.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --experimental-nested-config -A no-console --config oxlint-no-console.json
working directory: fixtures/nested_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 7 files with 99 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
