apps/oxlint/src/snapshots/fixtures__nested_config_--experimental-nested-config -A no-console@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --experimental-nested-config -A no-console
working directory: fixtures/nested_config
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Delete this code.

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[package1-empty-config/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Delete this code.

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\eslint(no-debugger)]8;;\: `debugger` statement is not allowed
   ,-[package2-no-config/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Delete this code.

Found 1 warning and 2 errors.
Finished in <variable>ms on 7 files with 99 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
