apps/oxlint/src/snapshots/fixtures__nested_config_-A no-console --config oxlint-no-console.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -A no-console --config oxlint-no-console.json
working directory: fixtures/nested_config
----------
Failed to parse configuration file.

  x Failed to parse config <cwd>/fixtures/nested_config/oxlint-no-console.json with error Os { code: 2, kind: NotFound,
  | message: "No such file or directory" }

----------
CLI result: InvalidOptionConfig
----------
